service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "hello"
  labels:
    app: "hello"
    track: "release"
spec:
  ports:
  - name: "hello"
    port: 3000
    targetPort: 8080
  selector:
    app: "hello"
  type: LoadBalancer
